// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KpiChart /> should render with render props 1`] = `
.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  font-weight: 400;
  color: hsl(0,100%,100%);
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  outline: none;
  color: hsl(213,17%,20%);
  background: none;
  border: none;
}

.c5 svg > path {
  fill: hsl(0,100%,100%);
}

.c5 svg > path {
  fill: hsl(213,17%,20%);
}

.c5:hover:not([disabled]):not(:active) {
  color: current;
  background: none;
  border: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-weight: 600;
  font-size: 1.6rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px dotted hsl(213,17%,20%);
}

.c3 {
  height: 37.3rem;
}

.c4 {
  position: absolute;
  bottom: 1.5rem;
  left: 1rem;
}

.c4 button {
  color: hsl(200,74%,46%);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2.4rem 2rem;
  height: 100%;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background: hsl(0,100%,100%);
  font-size: 1.2rem;
}

<Styled(KpiChart)
  label="label"
  render={[Function]}
  title="title"
>
  <KpiChart
    className="c0"
    label="label"
    render={[Function]}
    title="title"
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.div>
            <div
              className="c2"
            >
              title
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c3"
        >
          <p>
            Render Props
          </p>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          <Button
            ghost={true}
          >
            <Button
              big={false}
              className=""
              disabled={false}
              failure={false}
              fluid={false}
              ghost={true}
              icon={null}
              iconPosition="left"
              isGoogle={false}
              onClick={[Function]}
              primary={false}
              secondary={false}
              small={false}
              success={false}
              type="button"
            >
              <styled.button
                big={false}
                className=""
                disabled={false}
                failure={false}
                fluid={false}
                ghost={true}
                isGoogle={false}
                onClick={[Function]}
                primary={false}
                secondary={false}
                small={false}
                success={false}
                type="button"
              >
                <button
                  className="c5"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                   
                  label
                   
                </button>
              </styled.button>
            </Button>
          </Button>
        </div>
      </styled.div>
    </div>
  </KpiChart>
</Styled(KpiChart)>
`;

exports[`<KpiChart /> should render withouth a problem 1`] = `
.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  font-weight: 400;
  color: hsl(0,100%,100%);
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  outline: none;
  color: hsl(213,17%,20%);
  background: none;
  border: none;
}

.c5 svg > path {
  fill: hsl(0,100%,100%);
}

.c5 svg > path {
  fill: hsl(213,17%,20%);
}

.c5:hover:not([disabled]):not(:active) {
  color: current;
  background: none;
  border: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-weight: 600;
  font-size: 1.6rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px dotted hsl(213,17%,20%);
}

.c3 {
  height: 37.3rem;
}

.c4 {
  position: absolute;
  bottom: 1.5rem;
  left: 1rem;
}

.c4 button {
  color: hsl(200,74%,46%);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2.4rem 2rem;
  height: 100%;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background: hsl(0,100%,100%);
  font-size: 1.2rem;
}

<Styled(KpiChart)
  label="label"
  title="title"
>
  <KpiChart
    className="c0"
    label="label"
    render={[Function]}
    title="title"
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.div>
            <div
              className="c2"
            >
              title
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c3"
        />
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          <Button
            ghost={true}
          >
            <Button
              big={false}
              className=""
              disabled={false}
              failure={false}
              fluid={false}
              ghost={true}
              icon={null}
              iconPosition="left"
              isGoogle={false}
              onClick={[Function]}
              primary={false}
              secondary={false}
              small={false}
              success={false}
              type="button"
            >
              <styled.button
                big={false}
                className=""
                disabled={false}
                failure={false}
                fluid={false}
                ghost={true}
                isGoogle={false}
                onClick={[Function]}
                primary={false}
                secondary={false}
                small={false}
                success={false}
                type="button"
              >
                <button
                  className="c5"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                   
                  label
                   
                </button>
              </styled.button>
            </Button>
          </Button>
        </div>
      </styled.div>
    </div>
  </KpiChart>
</Styled(KpiChart)>
`;
